--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,11 @@ body {
   overflow-x: hidden;
 }
 
-/* header {
-
-} */
+header {
+  background-color: rgba(42, 91, 165, 0.075);
+  position: sticky;
+  top: 0;
+}
 
 .logo {
   height: 8rem;
@@ -20,6 +22,7 @@ body {
 
 li {
   list-style: none;
+  font-size: 2.5rem;
 }
 
 a {
@@ -28,11 +31,13 @@ a {
 }
 
 .navbar {
+  background-color: transparent;
   min-height: 4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1.5rem;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.26);
 }
 
 .nav {
@@ -40,10 +45,11 @@ a {
   justify-content: space-between;
   align-items: center;
   gap: 5rem;
+  padding-right: 2rem;
 }
 
 .nav-link {
-  transition: 0.7s ease;
+  transition: 1s ease;
 }
 
 .nav-link:hover {
@@ -83,9 +89,10 @@ a {
 .card {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
   padding: 0rem 3rem;
+  font-size: 2rem;
 }
 
 .about {
@@ -125,7 +132,8 @@ footer {
   text-align: center;
 }
 
-@media (max-width: 768px) {
+
+@media (max-width: 1100px) {
   .hamburger {
     display: block;
   }
@@ -164,5 +172,9 @@ footer {
 
   .nav.active {
     left: 0;
+  }
+
+  .card-container {
+    flex-direction: column;
   }
 }
