--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,10 @@ a {
 }
 
 @media (max-width: 768px) {
+
+  .hero {
+    background-image: url("img/fam2-min.jpg");
+  }
   .card-container {
     gap: 1.5rem;
     margin: 1.5rem 1rem;
