--- a/styles.css
+++ b/styles.css
@@ -213,18 +213,15 @@ a {
     text-align: center;
     transition: 0.3s;
   }
-
-  .nav-item {
-    margin: 1rem 0;
-    padding: 3rem 0 0 10rem;
-  }
-
-  .tel {
   
+  .nav-item {
+    padding: 1rem 0;
+    margin: 0;
   }
 
   .nav.active {
     left: 0;
+    padding: 9rem 0;
   }
 
   .card-container {
