updated hero for mobile

--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,7 @@ p {
     width: 100%;
     text-align: center;
     transition: 0.3s;
+    z-index: 999;
   }
 
   .nav-item {
@@ -261,7 +262,7 @@ p {
   }
 
   .hero-call {
-    display: none;
+    /* display: none; */
     padding: 1rem;
     font-size: 1.5rem;
     z-index: 1;
